oasis-macros/tests/ui/state_non_pod_type.stderr
error: Contract field must be a POD type.
 --> $DIR/state_non_pod_type.rs:4:19
  |
4 | pub struct NonPOD(*const u8);
  |                   ^

error: aborting due to previous error

